<resources>

    <string name="app_name">Semestralny L</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_link_to_register">Sign up now.</string>
    <string name="btn_link_to_login">Login Me.</string>
    <string name="welcome">Welcome</string>
    <string name="btn_logout">LOGOUT</string>
    <string name="name">Fullname</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_user">UserActivity</string>
    <string name="btn_play_game">Play Game!</string>
    <string name="btn_statistics">Statistics</string>
    <string name="wantplaygame">Want play game?</string>
    <string name="title_activity_board">BoardActivity</string>
    <string name="title_activity_end_game">EndGameActivity</string>
    <string name="end_game">You won!</string>
    <string name="time">your time was:</string>
    <string name="btn_exit">Exit</string>
    <string name="title_activity_play_game">PlayGameActivity</string>
    <string name="choose_your_destiny">Choose your destiny</string>
    <string name="btn_test_your_might">Tower Challenge</string>
    <string name="btn_custom">Custom Game</string>
    <string name="set_size">Set board size, for example - 5 for 5x5</string>
    <string name="btn_custom_play">PLAY!</string>
    <string name="btn_next">Next level</string>
    <string name="title_activity_statistics">StatisticsActivity</string>
    <string name="average_time">Average time</string>
    <string name="average_board_size">Average board size</string>
    <string name="average_movements">Number of average movements</string>
    <string name="btn_send_statistics">Send statistics</string>

</resources>
